# ir_kg_exploration

./: README.md  requirements.txt
anngel/: README.md  pyproject.toml
data/: IR_GeneID_names.csv  IR_related_diseases_DOID_533.tsv  IRrelatedPathways  Nodes_OpenBioLink_connected_IR.txt
ghl/: .gitignore  README.md  pyproject.toml
ghl/ghl/algorithms/topology/tests/: test_topology.py
ghl/ghl/cli/: main.py
ghl/ghl/cli/algorithms/: node_features.py  pairwise_features.py
ghl/ghl/cli/db/: export_edge_features.py  export_edges.py  export_node_features.py  export_nodes.py
ghl/ghl/datalib/s3datastore/tests/: test_S3DataStore.py
ghl/ghl/datasets/custom_dataset/tests/: manual_test.ipynb
ghl/ghl/datasets/hetionet/: __init__.py
ghl/ghl/datasets/hetionet/tests/: manual_test.ipynb  test_hetionet.py
ghl/ghl/datasets/multiscale_interactome/: __init__.py
ghl/ghl/datasets/multiscale_interactome/tests/: manual_test.ipynb  test_multiscaleinteractome.py
ghl/ghl/datasets/openbiolink/tests/: manual_test.ipynb  test_openbiolink.py
ghl/ghl/dblib/: __init__.py
ghl/ghl/dblib/neo4jlib/tests/: test_Neo4JDatabase.py
link_prediction/: Predict_genes.ipynb
positive_unlabelled/: 1_openbiolink_data_preparation.ipynb  1_openbiolink_data_preparation_large.ipynb  1_openbiolink_data_preparation_large_2.ipynb  1_openbiolink_data_preparation_large_small_DS.ipynb  1_openbiolink_data_preparation_small_DS.ipynb  2_elkanoto.ipynb  2_elkanoto_xgboost.ipynb  2_if.ipynb  2_lof.ipynb  2_ocsvm.ipynb  2_openbiolink_elkanoto.ipynb  2_openbiolink_elkanoto_RF.ipynb  2_openbiolink_if.ipynb  (+9 more)
(+156 files in other folders)
