[tool.poetry]
name = "ghl"
version = "0.1.0"
description = ""
authors = ["Tankred Ott, Viktor Sandberg"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
numpy = "^1.24.2"
pandas = "^1.5.3"
scikit-learn = "^1.2.2"
scipy = "^1.10.1"
click = "^8.1.3"
cloup = "^2.0.0.post1"
neo4j = "^5.6.0"
graphdatascience = "^1.6"
tqdm = "^4.65.0"
boto3 = "^1.26.102"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
pytest = "^7.2.2"
python-dotenv = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
ghl = "ghl.cli.main:main"
